--- a/Front/museum/src/CSS/AdminPanel.css
+++ b/Front/museum/src/CSS/AdminPanel.css
@@ -6,11 +6,12 @@
     height: 100vh;
 }
 
-.line
+.line-r
 {
     background-color: #FFFFFF;
     border-radius: 5px;
     position: relative;  
+    box-shadow: 0px 0px 40px #000000;
 }
 
 p 
