--- a/Front/museum/src/CSS/Cards.css
+++ b/Front/museum/src/CSS/Cards.css
@@ -10,6 +10,11 @@
     margin-bottom: 10px;
 }
 
+.card.light
+{
+    box-shadow: 0px 0px 20px rgba(187, 187, 187, 0.8);
+}
+
 .card.layout
 {
     display: grid;
@@ -20,20 +25,21 @@
                             "image content icons";
 }
 
+
 .card-container
 {   
     position: relative;
     margin: 0 auto; 
+    padding: 40px;
     overflow-y: scroll;
     border-radius: 25px;
-    width:980px;
     height: 832px;
     display: grid;
     grid-gap: 20px;    
     grid-template-columns: 1fr  1fr;
     grid-template-rows: auto;  
     background-color: #767575;
-    padding: 40px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
 }
 
 .card-container::-webkit-scrollbar 
@@ -85,20 +91,13 @@
     align-items: center;
 }
 
-/* .fake-container::-webkit-scrollbar 
-{   
-    width: 10px;
-    position: fixed;
-    left:180px; 
-}
-.fake-container::-webkit-scrollbar-track 
+.containerWithHeader
 {
-    background: #ffffff;;    
-    border-radius: 5px;
+    position: relative;
+    margin: 0 auto; 
+    border-radius: 25px;
+    display:"grid";
+    grid-template:"60px 1fr/1fr";
+    background-color: #767575;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
 }
-
-.fake-container::-webkit-scrollbar-thumb 
-{
-    background: #383838;
-    border-radius: 3px;
-} */
