--- a/Front/museum/src/Components/PopOut/css/PopOut.css
+++ b/Front/museum/src/Components/PopOut/css/PopOut.css
@@ -6,6 +6,21 @@
     align-items: center;
     justify-content: center;
     width: 100vw;
+    height: 100vh;   
+}
+
+.container > *
+{
+    z-index: 2;
+    position: relative;
+    margin: 0 auto;
+}
+
+.filler
+{
+    z-index: 1;    
+    width: 100vw;
     height: 100vh;
+    position: absolute;
     background-color: rgba(0, 0, 0, 0.5);
 }
