--- a/Front/museum/src/Css/Components/Cards.css
+++ b/Front/museum/src/Css/Components/Cards.css
@@ -32,7 +32,7 @@
     padding: 40px;
     overflow-y: scroll;
     border-radius: 25px;
-    height: 832px;
+    height: 75vh;
     display: grid;
     grid-gap: 20px;    
     grid-template-columns: 1fr  1fr;
