--- a/Front/museum/src/Components/AdminPage/ExhibitsAddList/Css/ExhibitsAddList.css
+++ b/Front/museum/src/Components/AdminPage/ExhibitsAddList/Css/ExhibitsAddList.css
@@ -125,7 +125,7 @@
     overflow: hidden;
 }
 
-.check-card > button
+.actionButton
 {
     grid-area: button;
     background-color: transparent;
@@ -136,6 +136,20 @@
     z-index: 5;
     outline: none;
 }
+
+.animB
+{
+    border: 2px solid transparent;
+    border-radius: 3px;
+}
+
+.animB:hover
+{
+    border: 2px solid white;
+    transition: ease-in-out 0.35s;    
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);  
+}
+
 
 /* .check-card > button:hover::after
 {
