--- a/Front/museum/src/Css/Components/LineLabels.css
+++ b/Front/museum/src/Css/Components/LineLabels.css
@@ -4,3 +4,14 @@
     border-radius: 5px;
     position: absolute;  
 }
+
+.nav-map-label
+{
+    color: white    ;
+}
+
+.animate
+{
+    transition: ease-in-out 1s;
+    color:red;
+}
